@@ -243,6 +243,16 @@ import theano and print the config variable, as in:
     the user and skip this optimization ('warn'), or raise the exception
     ('raise').
 
+.. attribute:: on_shape_error
+
+    String value: 'warn' or 'raise'
+
+    Default: 'warn'
+
+    When an exception is raised when infering the shape of some apply
+    node, either warn the user and use a default value ('warn'), or
+    raise the exception ('raise').
+
 .. attribute:: config.warn.ignore_bug_before
 
     String value: 'None', 'all', '0.3', '0.4', '0.4.1', '0.5'
